--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Title</title>
+    <title>HEBIB Abderahmane | MNS</title>
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta
@@ -32,7 +32,7 @@
             class="img-fluid rounded-circle mb-4"
           />
           <h1>HEBIB Abderahmane</h1>
-          <p>Développeur Web Junior</p>
+          <p>Développeur Web Junior à Metz Numéric School</p>
         </div>
       </div>
     </main>
