--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+    />
   </head>
 
   <body>
@@ -23,21 +27,279 @@
       <!-- place navbar here -->
     </header>
     <main>
-      <div class="row justify-content-center aligns-items-center vh-100">
-        <div class="col-4 text-center">
-          <img
-            src="./20241001_195851.jpg"
-            width="500"
-            alt="Photo de profil HEBIB Abderahmane"
-            class="img-fluid rounded-circle mb-4"
-          />
-          <h1>HEBIB Abderahmane</h1>
-          <p>Développeur Web Junior à Metz Numéric School</p>
+      <!--SECTION HERO-->
+      <section id="hero">
+        <div class="row justify-content-center aligns-items-center vh-100">
+          <div class="col-4 text-center">
+            <img
+              src="./20241001_195851.jpg"
+              width="500"
+              alt="Photo de profil HEBIB Abderahmane"
+              class="img-fluid rounded-circle mb-4"
+            />
+            <h1>HEBIB Abderahmane</h1>
+            <p>Développeur Web Junior à Metz Numéric School</p>
+          </div>
+        </div>
+      </section>
+      <!--FIN SECTION-->
+      <section id="about">
+        <div class="container">
+          <div class="row justify-content-center align-items-center vh-100">
+            <div class="col-6">
+              <img
+                src="https://dummyimage.com/500x500.gif"
+                alt=""
+                class="img-fluid"
+              />
+            </div>
+            <div class="col-6">
+              <h2>A propos de moi</h2>
+              <p>
+                Théo Gamory est un spécialiste en informatique et spécialisé
+                dans le développement web. Il a passé plus de 10 ans dans le
+                domaine et travaille actuellement chez Metz Numeric School.
+              </p>
+              <p>
+                Il est un passionné et créatif, et il encourage les gens à
+                apprendre et à progresser dans leur carrière. Théo possède un
+                diplôme en Informatique et un certificat en développeur web.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section id="skills">
+        <div class="container">
+          <div class="row justify-content-center align-items-center vh-100">
+            <div class="col-12 text-center">
+              <h2>Compétences</h2>
+
+              <div class="row justify-content-center">
+                <div class="col-4 p-4">
+                  <h3>Soft-skills</h3>
+
+                  <strong>Travail en équipe</strong>
+                  <div class="progress mb-4">
+                    <div
+                      class="progress-bar"
+                      role="progressbar"
+                      style="width: 90%"
+                      aria-valuenow="90"
+                      aria-valuemin="0"
+                      aria-valuemax="100"
+                    >
+                      90 %
+                    </div>
+                  </div>
+
+                  <strong>Capacité d'écoute</strong>
+                  <div class="progress mb-4">
+                    <div
+                      class="progress-bar"
+                      role="progressbar"
+                      style="width: 80%"
+                      aria-valuenow="80"
+                      aria-valuemin="0"
+                      aria-valuemax="100"
+                    >
+                      80 %
+                    </div>
+                  </div>
+
+                  <strong>Confiance en soi</strong>
+                  <div class="progress mb-4">
+                    <div
+                      class="progress-bar"
+                      role="progressbar"
+                      style="width: 100%"
+                      aria-valuenow="100"
+                      aria-valuemin="0"
+                      aria-valuemax="100"
+                    >
+                      100 %
+                    </div>
+                  </div>
+                </div>
+                <div class="col-4 p-4">
+                  <h3>Hard-skills</h3>
+
+                  <strong>Intégration web (HTML/CSS)</strong>
+                  <div class="progress mb-4">
+                    <div
+                      class="progress-bar"
+                      role="progressbar"
+                      style="width: 95%"
+                      aria-valuenow="95"
+                      aria-valuemin="0"
+                      aria-valuemax="100"
+                    >
+                      95 %
+                    </div>
+                  </div>
+
+                  <strong>Développement back-end (PHP/Symfony)</strong>
+                  <div class="progress mb-4">
+                    <div
+                      class="progress-bar"
+                      role="progressbar"
+                      style="width: 85%"
+                      aria-valuenow="85"
+                      aria-valuemin="0"
+                      aria-valuemax="100"
+                    >
+                      85 %
+                    </div>
+                  </div>
+
+                  <strong>Gestion de base de données (SQL/MySQL)</strong>
+                  <div class="progress mb-4">
+                    <div
+                      class="progress-bar"
+                      role="progressbar"
+                      style="width: 75%"
+                      aria-valuenow="75"
+                      aria-valuemin="0"
+                      aria-valuemax="100"
+                    >
+                      75 %
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section id="projects">
+        <div class="container py-5">
+          <div class="row justify-content-center align-items-center">
+            <div class="col-12 text-center">
+              <h2 class="mb-4">Projets réalisés</h2>
+
+              <div class="row justify-content-center">
+                <div class="col-3 mb-4">
+                  <div class="card">
+                    <img
+                      src="https://dummyimage.com/1920x1080.gif"
+                      alt=""
+                      class="img-fluid"
+                    />
+                    <div class="card-body">
+                      <h5 class="card-title">Projet #1</h5>
+                      <p class="card-text">Description du projet.</p>
+                      <a href="#" class="btn btn-primary">Voir en ligne</a>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="col-3 mb-4">
+                  <div class="card">
+                    <img
+                      src="https://dummyimage.com/1920x1080.gif"
+                      alt=""
+                      class="img-fluid"
+                    />
+                    <div class="card-body">
+                      <h5 class="card-title">Projet #1</h5>
+                      <p class="card-text">Description du projet.</p>
+                      <a href="#" class="btn btn-primary">Voir en ligne</a>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-3 mb-4">
+                  <div class="card">
+                    <img
+                      src="https://dummyimage.com/1920x1080.gif"
+                      alt=""
+                      class="img-fluid"
+                    />
+                    <div class="card-body">
+                      <h5 class="card-title">Projet #1</h5>
+                      <p class="card-text">Description du projet.</p>
+                      <a href="#" class="btn btn-primary">Voir en ligne</a>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-3 mb-4">
+                  <div class="card">
+                    <img
+                      src="https://dummyimage.com/1920x1080.gif"
+                      alt=""
+                      class="img-fluid"
+                    />
+                    <div class="card-body">
+                      <h5 class="card-title">Projet #1</h5>
+                      <p class="card-text">Description du projet.</p>
+                      <a href="#" class="btn btn-primary">Voir en ligne</a>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-3 mb-4">
+                  <div class="card">
+                    <img
+                      src="https://dummyimage.com/1920x1080.gif"
+                      alt=""
+                      class="img-fluid"
+                    />
+                    <div class="card-body">
+                      <h5 class="card-title">Projet #1</h5>
+                      <p class="card-text">Description du projet.</p>
+                      <a href="#" class="btn btn-primary">Voir en ligne</a>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-3 mb-4">
+                  <div class="card">
+                    <img
+                      src="https://dummyimage.com/1920x1080.gif"
+                      alt=""
+                      class="img-fluid"
+                    />
+                    <div class="card-body">
+                      <h5 class="card-title">Projet #1</h5>
+                      <p class="card-text">Description du projet.</p>
+                      <a href="#" class="btn btn-primary">Voir en ligne</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+    <footer class="bg-dark text-bg-dark">
+      <div class="container py-5">
+        <div class="row">
+          <div class="col-4">
+            <h5>Contact</h5>
+            <p>contact@metznumericschool.fr</p>
+          </div>
+          <div class="col-4">
+            <h5>Liens utiles</h5>
+            <p>
+              <a href="https://metznumericschool.fr">Metz Numeric School</a>
+            </p>
+          </div>
+          <div class="col-4">
+            <h5>Réseaux sociaux</h5>
+            <a href="#"><i class="bi bi-github"></i></a>
+            <a href="#"><i class="bi bi-twitter-x"></i></a>
+            <a href="#"><i class="bi bi-linkedin"></i></a>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-12 text-center">
+            <p>
+              &copy; 2023 - 2024 - Tous droits réservés -
+              <a href="#">Mentions légales</a>
+            </p>
+          </div>
         </div>
       </div>
-    </main>
-    <footer>
-      <!-- place footer here -->
     </footer>
     <!-- Bootstrap JavaScript Libraries -->
     <script
