Màj Portfolio-mns

--- a/index.html
+++ b/index.html
@@ -56,13 +56,13 @@
             <div class="col-6">
               <h2>A propos de moi</h2>
               <p>
-                Théo Gamory est un spécialiste en informatique et spécialisé
-                dans le développement web. Il a passé plus de 10 ans dans le
-                domaine et travaille actuellement chez Metz Numeric School.
+                Je suis spécialiste en informatique et spécialisé dans le
+                développement web. Il a passé plus de 10 ans dans le domaine et
+                travaille actuellement chez Metz Numeric School.
               </p>
               <p>
                 Il est un passionné et créatif, et il encourage les gens à
-                apprendre et à progresser dans leur carrière. Théo possède un
+                apprendre et à progresser dans leur carrière. Je possède un
                 diplôme en Informatique et un certificat en développeur web.
               </p>
             </div>
