MàJ Portfolio-mns

--- a/index.html
+++ b/index.html
@@ -24,7 +24,41 @@
 
   <body>
     <header>
-      <!-- place navbar here -->
+      <nav class="navbar navbar-expand-lg fixed-top">
+        <div class="container">
+          <a class="navbar-brand" href="#">
+            <img
+              src="https://dummyimage.com/80x80.png"
+              alt="Logo MNS"
+              class="img-fluid"
+            />
+          </a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link" href="#about">À propos</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#skills">Compétences</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#projects">Mes projets</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
     </header>
     <main>
       <!--SECTION HERO-->
@@ -286,9 +320,9 @@
           </div>
           <div class="col-4">
             <h5>Réseaux sociaux</h5>
-            <a href="#"><i class="bi bi-github"></i></a>
-            <a href="#"><i class="bi bi-twitter-x"></i></a>
-            <a href="#"><i class="bi bi-linkedin"></i></a>
+            <a href="#" class="fs-4"><i class="bi bi-github"></i></a>
+            <a href="#" class="fs-4"><i class="bi bi-twitter-x"></i></a>
+            <a href="#" class="fs-4"><i class="bi bi-linkedin"></i></a>
           </div>
         </div>
         <div class="row">
