Màj Portfolio-mns

--- a/index.html
+++ b/index.html
@@ -20,18 +20,16 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
     />
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <link rel="stylesheet" href="custom.css" />
   </head>
 
   <body>
     <header>
-      <nav class="navbar navbar-expand-lg fixed-top">
+      <nav class="navbar navbar-expand-lg bg bg-body-tertiary fixed-top">
         <div class="container">
           <a class="navbar-brand" href="#">
-            <img
-              src="https://dummyimage.com/80x80.png"
-              alt="Logo MNS"
-              class="img-fluid"
-            />
+            <img src="./img/logo.png" width="80" alt="Logo" class="img-fluid" />
           </a>
           <button
             class="navbar-toggler"
@@ -63,16 +61,27 @@
     <main>
       <!--SECTION HERO-->
       <section id="hero">
-        <div class="row justify-content-center aligns-items-center vh-100">
-          <div class="col-4 text-center">
-            <img
-              src="./20241001_195851.jpg"
-              width="500"
-              alt="Photo de profil HEBIB Abderahmane"
-              class="img-fluid rounded-circle mb-4"
-            />
-            <h1>HEBIB Abderahmane</h1>
-            <p>Développeur Web Junior à Metz Numéric School</p>
+        <div class="container">
+          <div class="row justify-content-center align-items-center vh-100">
+            <div class="col-4 text-center">
+              <img
+                src="./img/20241001_195851-removebg-preview.png"
+                width="500"
+                alt="Photo de profil HEBIB Abderahmane"
+                class="img-fluid rounded-circle mb-4"
+              />
+              <h1>HEBIB Abderahmane</h1>
+              <p>Développeur Web Junior <br />à Metz Numéric School</p>
+            </div>
+            <div class="col-10 text-center">
+              <p>
+                Actuellement en formation à l’IFA Metz Numéric School, je
+                prépare un diplôme de niveau 5 du RNCP (Bac+2) en tant que
+                Développeur Web/Web Mobile, je suis, dans un premier temps, à la
+                recherche d'un stage d'immersion en entreprise qui se
+                déroulerait du 21 Juillet 2025 au 19 Sptembre 2025.
+              </p>
+            </div>
           </div>
         </div>
       </section>
@@ -80,24 +89,28 @@
       <section id="about">
         <div class="container">
           <div class="row justify-content-center align-items-center vh-100">
-            <div class="col-6">
-              <img
-                src="https://dummyimage.com/500x500.gif"
-                alt=""
-                class="img-fluid"
-              />
+            <div class="col-6" data-aos="fade-right">
+              <img src="./img/20250102_135535.jpg" alt="" class="img-fluid" />
             </div>
-            <div class="col-6">
+            <div class="col-6 text-center" data-aos="fade-left">
               <h2>A propos de moi</h2>
               <p>
-                Je suis spécialiste en informatique et spécialisé dans le
-                développement web. Il a passé plus de 10 ans dans le domaine et
-                travaille actuellement chez Metz Numeric School.
+                Avec une méthode rigoureuse et un souci constant de la qualité,
+                je mets mes compétences de développeur web au service de la
+                création de sites web responsive, accessible, performants,
+                intuitifs et esthétiques. Fort de mon expérience sur différentes
+                plateformes par le biais de la formation "Développement Web /
+                Web mobile" proposée par "Metz Numéric School" et de ma passion
+                pour l'univers du numérique, je suis également en mesure de vous
+                apporter des conseils pertinents pour améliorer l'expérience
+                utilisateur de vos projets.
               </p>
               <p>
-                Il est un passionné et créatif, et il encourage les gens à
-                apprendre et à progresser dans leur carrière. Je possède un
-                diplôme en Informatique et un certificat en développeur web.
+                Etant en constante évolution, je compte par la suite développer
+                mes compétences et connaissances en intégrant au mois d'Octobre
+                2024 "si ma recherche d'employeur pour un contrat en alternance
+                aboutie", la formation "Développeur Full Stack" à Metz Numéric
+                School.
               </p>
             </div>
           </div>
@@ -111,7 +124,7 @@
               <h2>Compétences</h2>
 
               <div class="row justify-content-center">
-                <div class="col-4 p-4">
+                <div class="col-4 p-4" data-aos="fade-right">
                   <h3>Soft-skills</h3>
 
                   <strong>Travail en équipe</strong>
@@ -156,7 +169,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-4 p-4">
+                <div class="col-4 p-4" data-aos="fade-left">
                   <h3>Hard-skills</h3>
 
                   <strong>Intégration web (HTML/CSS)</strong>
@@ -217,14 +230,19 @@
                 <div class="col-3 mb-4">
                   <div class="card">
                     <img
-                      src="https://dummyimage.com/1920x1080.gif"
+                      src="./img/logo-3eveches.png"
                       alt=""
                       class="img-fluid"
                     />
                     <div class="card-body">
-                      <h5 class="card-title">Projet #1</h5>
-                      <p class="card-text">Description du projet.</p>
-                      <a href="#" class="btn btn-primary">Voir en ligne</a>
+                      <h5 class="card-title">Projet WordPress</h5>
+                      <p class="card-text">Épicerie "les 3 Évêchés"</p>
+                      <a
+                        href="https://les3eveches.fr"
+                        target="_blank"
+                        class="btn btn-primary"
+                        >Voir en ligne</a
+                      >
                     </div>
                   </div>
                 </div>
@@ -232,14 +250,20 @@
                 <div class="col-3 mb-4">
                   <div class="card">
                     <img
-                      src="https://dummyimage.com/1920x1080.gif"
+                      src="./img/logo.png"
+                      width="188"
                       alt=""
                       class="img-fluid"
                     />
                     <div class="card-body">
-                      <h5 class="card-title">Projet #1</h5>
-                      <p class="card-text">Description du projet.</p>
-                      <a href="#" class="btn btn-primary">Voir en ligne</a>
+                      <h5 class="card-title">Projet Portfolio Complet</h5>
+                      <p class="card-text">Portfolio</p>
+                      <a
+                        href="https://hebib57.github.io/Portfolio"
+                        target="_blank"
+                        class="btn btn-primary"
+                        >Voir en ligne</a
+                      >
                     </div>
                   </div>
                 </div>
@@ -321,15 +345,32 @@
           <div class="col-4">
             <h5>Réseaux sociaux</h5>
             <a href="#" class="fs-4"><i class="bi bi-github"></i></a>
-            <a href="#" class="fs-4"><i class="bi bi-twitter-x"></i></a>
-            <a href="#" class="fs-4"><i class="bi bi-linkedin"></i></a>
+            <a
+              href="https://twitter.com/HEBIBAbder"
+              target="_blank"
+              class="fs-4"
+              ><i class="bi bi-twitter-x"></i
+            ></a>
+            <a
+              href="https://linkedin.com/in/abderahmanehebib
+
+            "
+              class="fs-4"
+              ><i class="bi bi-linkedin"></i
+            ></a>
+            <a href="https://facebook.com/" class="fs-4"
+              ><i class="bi bi-facebook"></i
+            ></a>
+            <a href="https://instagram.com/" class="fs-4"
+              ><i class="bi bi-instagram"></i
+            ></a>
           </div>
         </div>
         <div class="row">
           <div class="col-12 text-center">
             <p>
               &copy; 2023 - 2024 - Tous droits réservés -
-              <a href="#">Mentions légales</a>
+              <a href="mentions.html" target="_blank">Mentions légales</a>
             </p>
           </div>
         </div>
@@ -347,5 +388,9 @@
       integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
       crossorigin="anonymous"
     ></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
   </body>
 </html>
