modification portfolio-mns

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       <section id="hero">
         <div class="container">
           <div class="row justify-content-center align-items-center vh-100">
-            <div class="col-4 text-center">
+            <div class="col-12 col-md-6 text-center">
               <img
                 src="./img/20241001_195851-removebg-preview.png"
                 width="500"
@@ -71,9 +71,9 @@
                 class="img-fluid rounded-circle mb-4"
               />
               <h1>HEBIB Abderahmane</h1>
-              <p>Développeur Web Junior <br />à Metz Numéric School</p>
+              <p>Développeur Web Junior</p>
             </div>
-            <div class="col-10 text-center">
+            <div class="col-12 col-md-6 text-center">
               <p>
                 Actuellement en formation à l’IFA Metz Numéric School, je
                 prépare un diplôme de niveau 5 du RNCP (Bac+2) en tant que
@@ -89,10 +89,10 @@
       <section id="about">
         <div class="container">
           <div class="row justify-content-center align-items-center vh-100">
-            <div class="col-6" data-aos="fade-right">
+            <div class="col-12 col-md-6" data-aos="fade-right">
               <img src="./img/20250102_135535.jpg" alt="" class="img-fluid" />
             </div>
-            <div class="col-6 text-center" data-aos="fade-left">
+            <div class="col-12 col-md-6 text-center" data-aos="fade-left">
               <h2>A propos de moi</h2>
               <p>
                 Avec une méthode rigoureuse et un souci constant de la qualité,
@@ -124,7 +124,7 @@
               <h2>Compétences</h2>
 
               <div class="row justify-content-center">
-                <div class="col-4 p-4" data-aos="fade-right">
+                <div class="col-12 col-md-4 p-4" data-aos="fade-right">
                   <h3>Soft-skills</h3>
 
                   <strong>Travail en équipe</strong>
@@ -169,7 +169,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-4 p-4" data-aos="fade-left">
+                <div class="col-12 col-md-4 p-4" data-aos="fade-left">
                   <h3>Hard-skills</h3>
 
                   <strong>Intégration web (HTML/CSS)</strong>
@@ -227,7 +227,7 @@
               <h2 class="mb-4">Projets réalisés</h2>
 
               <div class="row justify-content-center">
-                <div class="col-3 mb-4">
+                <div class="col-12 col-md-3 mb-4">
                   <div class="card">
                     <img
                       src="./img/logo-3eveches.png"
@@ -247,14 +247,16 @@
                   </div>
                 </div>
 
-                <div class="col-3 mb-4">
+                <div class="col-12 col-md-3 mb-4">
                   <div class="card">
-                    <img
-                      src="./img/logo.png"
-                      width="188"
-                      alt=""
-                      class="img-fluid"
-                    />
+                    <div class="justify-content-center">
+                      <img
+                        src="./img/logo.png"
+                        width="188"
+                        alt=""
+                        class="img-fluid"
+                      />
+                    </div>
                     <div class="card-body">
                       <h5 class="card-title">Projet Portfolio Complet</h5>
                       <p class="card-text">Portfolio</p>
@@ -267,7 +269,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-3 mb-4">
+                <div class="col-12 col-md-3 mb-4">
                   <div class="card">
                     <img
                       src="https://dummyimage.com/1920x1080.gif"
@@ -281,7 +283,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-3 mb-4">
+                <div class="col-12 col-md-3 mb-4">
                   <div class="card">
                     <img
                       src="https://dummyimage.com/1920x1080.gif"
@@ -295,7 +297,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-3 mb-4">
+                <div class="col-12 col-md-3 mb-4">
                   <div class="card">
                     <img
                       src="https://dummyimage.com/1920x1080.gif"
@@ -309,7 +311,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-3 mb-4">
+                <div class="col-12 col-md-3 mb-4">
                   <div class="card">
                     <img
                       src="https://dummyimage.com/1920x1080.gif"
@@ -332,17 +334,17 @@
     <footer class="bg-dark text-bg-dark">
       <div class="container py-5">
         <div class="row">
-          <div class="col-4">
+          <div class="col-12 col-md-4">
             <h5>Contact</h5>
             <p>contact@metznumericschool.fr</p>
           </div>
-          <div class="col-4">
+          <div class="col-12 col-md-4">
             <h5>Liens utiles</h5>
             <p>
               <a href="https://metznumericschool.fr">Metz Numeric School</a>
             </p>
           </div>
-          <div class="col-4">
+          <div class="col-12 col-md-4">
             <h5>Réseaux sociaux</h5>
             <a href="#" class="fs-4"><i class="bi bi-github"></i></a>
             <a
