--- a/mentions.html
+++ b/mentions.html
@@ -59,8 +59,8 @@
       </nav>
     </header>
     <main>
-      <section class="container text-center">
-        <h2>MENTIONS LÉGALES</h2>
+      <section class="container">
+        <h2 class="text-center">MENTIONS LÉGALES</h2>
         <p>
           Conformément aux dispositions de la loi n° 2004-575 du 21 juin 2004
           pour la confiance en l'économie numérique, il est précisé aux
