--- a/mentions.html
+++ b/mentions.html
@@ -26,10 +26,15 @@
 
   <body>
     <header>
-      <nav class="navbar navbar-expand-lg bg bg-body-tertiary">
+      <nav class="navbar navbar-expand-lg bg bg-body-tertiary border-bottom">
         <div class="container">
           <a class="navbar-brand" href="index.html">
-            <img src="./img/logo.png" width="80" alt="Logo" class="img-fluid" />
+            <img
+              src="./img/logo-removebg-preview.png"
+              width="80"
+              alt="Logo"
+              class="img-fluid"
+            />
           </a>
           <button
             class="navbar-toggler"
@@ -96,20 +101,30 @@
       </section>
     </main>
 
-    <footer class="bg-dark text-bg-dark">
+    <footer class="bg-body-tertiary text-bg-light">
       <div class="container py-5">
         <div class="row">
-          <div class="col-4">
-            <h5>Contact</h5>
-            <p>contact@metznumericschool.fr</p>
+          <div class="col-3">
+            <a class="navbar-brand" href="index.html">
+              <img
+                src="./img/logo-removebg-preview.png"
+                width="80"
+                alt="Logo"
+                class="img-fluid"
+              />
+            </a>
           </div>
-          <div class="col-4">
+          <div class="col-3">
+            <h5>Contact</h5>
+            <p>abderahmane.hebib@gmail.com</p>
+          </div>
+          <div class="col-3">
             <h5>Liens utiles</h5>
             <p>
               <a href="https://metznumericschool.fr">Metz Numeric School</a>
             </p>
           </div>
-          <div class="col-4">
+          <div class="col-3">
             <h5>Réseaux sociaux</h5>
             <a href="#" class="fs-4"><i class="bi bi-github"></i></a>
             <a href="#" class="fs-4"><i class="bi bi-twitter-x"></i></a>
