--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
   <head>
     <title>HEBIB Abderahmane | MNS</title>
     <!-- Required meta tags -->
@@ -10,6 +10,7 @@
     />
 
     <!-- Bootstrap CSS v5.2.1 -->
+
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -108,12 +109,7 @@
                 déroulerait du 21 Juillet 2025 au 19 Sptembre 2025.
               </p>
 
-              <!-- <div
-                class="height-100 container d-flex justify-content-center align-items-center"
-              > -->
-              <!-- <div class="card p-3 mb-5"> -->
-              <!-- <div class="d-flex justify-content-between align-items-center"> -->
-              <h5 class="review-count mt-5">Soft-Skills</h5>
+              <h5 class="review-count mt-5 mb-3">Soft-Skills</h5>
               <div class="ratings">
                 <i class="fa fa-star rating-color"></i>
                 <i class="fa fa-star rating-color"></i>
@@ -121,7 +117,7 @@
                 <i class="fa fa-star rating-color"></i>
                 <i class="fa fa-star"></i>
               </div>
-              <!-- </div> -->
+
               <div class="container d-flex">
                 <div class="col-12 col-md-6">
                   <div
@@ -164,7 +160,6 @@
                   </div>
                 </div>
 
-                <!-- <div class="container d-flex"> -->
                 <div class="col-12 col-md-6">
                   <div
                     class="mt-5 d-flex justify-content-between align-items-center"
@@ -205,44 +200,42 @@
                     </div>
                   </div>
                 </div>
-                <!-- </div> -->
               </div>
-              <!-- </div> -->
-              <!-- </div> -->
+
               <div class="mt-5 d-flex justify-content-center gap-md-5">
                 <a
                   href="https://github.com/hebib57"
                   target="_blank"
                   class="fs-1"
-                  style="color: #ffd700"
+                  style="color: #fbc634"
                   ><i class="bi bi-github"></i
                 ></a>
                 <a
                   href="https://twitter.com/HEBIBAbder"
                   target="_blank"
                   class="fs-1"
-                  style="color: #ffd700"
+                  style="color: #fbc634"
                   ><i class="bi bi-twitter-x"></i
                 ></a>
                 <a
                   href="https://linkedin.com/in/abderahmanehebib"
                   target="_blank"
                   class="fs-1"
-                  style="color: #ffd700"
+                  style="color: #fbc634"
                   ><i class="bi bi-linkedin"></i
                 ></a>
                 <a
                   href="https://facebook.com/"
                   target="_blank"
                   class="fs-1"
-                  style="color: #ffd700"
+                  style="color: #fbc634"
                   ><i class="bi bi-facebook"></i
                 ></a>
                 <a
                   href="https://instagram.com/"
                   target="_blank"
                   class="fs-1"
-                  style="color: #ffd700"
+                  style="color: #fbc634"
                   ><i class="bi bi-instagram"></i
                 ></a>
               </div>
@@ -292,7 +285,9 @@
           <div class="row justify-content-center align-items-center vh-100">
             <div class="col-12 text-center mt-5">
               <h2>Compétences</h2>
-              <h3 class="mt-5">Hard-skills</h3>
+              <h3 class="btn btn-primary">
+                Hard-skills<i class="bi bi-file-earmark-pdf"></i>
+              </h3>
               <div class="row justify-content-center">
                 <div class="col-12 col-md-4 p-4 mt-5" data-aos="fade-right">
                   <div
@@ -465,11 +460,11 @@
         <div class="container py-5">
           <div class="row justify-content-center align-items-center">
             <div class="col-12 text-center">
-              <h2 class="mb-4">Projets réalisés</h2>
+              <h2 class="mb-5 pb-5 mt-5">Projets réalisés</h2>
 
               <div class="row justify-content-center">
                 <div class="col-12 col-md-3 mb-4">
-                  <div class="card" data-aos="zoom-in">
+                  <div class="card card-relief" data-aos="zoom-in">
                     <img
                       src="./img/logo-3eveches.png"
                       alt=""
@@ -481,7 +476,7 @@
                       <a
                         href="https://les3eveches.fr"
                         target="_blank"
-                        class="btn btn-primary"
+                        class="btn btn-dark"
                         >Voir en ligne</a
                       >
                     </div>
@@ -489,7 +484,7 @@
                 </div>
 
                 <div class="col-12 col-md-3 mb-4">
-                  <div class="card" data-aos="zoom-in">
+                  <div class="card card-relief" data-aos="zoom-in">
                     <div class="justify-content-center">
                       <img
                         src="./img/logo.png"
@@ -504,14 +499,14 @@
                       <a
                         href="https://hebib57.github.io/Portfolio"
                         target="_blank"
-                        class="btn btn-primary"
+                        class="btn btn-dark"
                         >Voir en ligne</a
                       >
                     </div>
                   </div>
                 </div>
                 <div class="col-12 col-md-3 mb-4">
-                  <div class="card" data-aos="zoom-in">
+                  <div class="card card-relief" data-aos="zoom-in">
                     <img
                       src="https://dummyimage.com/1920x1080.gif"
                       alt=""
@@ -520,12 +515,12 @@
                     <div class="card-body">
                       <h5 class="card-title">Projet #1</h5>
                       <p class="card-text">Description du projet.</p>
-                      <a href="#" class="btn btn-primary">Voir en ligne</a>
+                      <a href="#" class="btn btn-dark">Voir en ligne</a>
                     </div>
                   </div>
                 </div>
                 <div class="col-12 col-md-3 mb-4">
-                  <div class="card" data-aos="zoom-in">
+                  <div class="card card-relief" data-aos="zoom-in">
                     <img
                       src="https://dummyimage.com/1920x1080.gif"
                       alt=""
@@ -534,12 +529,12 @@
                     <div class="card-body">
                       <h5 class="card-title">Projet #1</h5>
                       <p class="card-text">Description du projet.</p>
-                      <a href="#" class="btn btn-primary">Voir en ligne</a>
+                      <a href="#" class="btn btn-dark">Voir en ligne</a>
                     </div>
                   </div>
                 </div>
                 <div class="col-12 col-md-3 mb-4">
-                  <div class="card" data-aos="zoom-in">
+                  <div class="card card-relief" data-aos="zoom-in">
                     <img
                       src="https://dummyimage.com/1920x1080.gif"
                       alt=""
@@ -548,12 +543,12 @@
                     <div class="card-body">
                       <h5 class="card-title">Projet #1</h5>
                       <p class="card-text">Description du projet.</p>
-                      <a href="#" class="btn btn-primary">Voir en ligne</a>
+                      <a href="#" class="btn btn-dark">Voir en ligne</a>
                     </div>
                   </div>
                 </div>
                 <div class="col-12 col-md-3 mb-4">
-                  <div class="card" data-aos="zoom-in">
+                  <div class="card card-relief" data-aos="zoom-in">
                     <img
                       src="https://dummyimage.com/1920x1080.gif"
                       alt=""
@@ -562,7 +557,7 @@
                     <div class="card-body">
                       <h5 class="card-title">Projet #1</h5>
                       <p class="card-text">Description du projet.</p>
-                      <a href="#" class="btn btn-primary">Voir en ligne</a>
+                      <a href="#" class="btn btn-dark">Voir en ligne</a>
                     </div>
                   </div>
                 </div>
@@ -595,18 +590,25 @@
             <div class="col-12 col-lg-3">
               <h5>Liens utiles</h5>
               <p>
-                <a href="https://metznumericschool.fr">Metz Numeric School</a>
+                <a href="https://metznumericschool.fr" style="color: #fbc634"
+                  >Metz Numeric School</a
+                >
               </p>
             </div>
-            <div class="col-12 col-lg-3">
+            <div class="col-12 col-md-3">
               <h5>Réseaux sociaux</h5>
-              <a href="https://github.com/hebib57" target="_blank" class="fs-4"
+              <a
+                href="https://github.com/hebib57"
+                target="_blank"
+                class="fs-4"
+                style="color: #fbc634"
                 ><i class="bi bi-github"></i
               ></a>
               <a
                 href="https://twitter.com/HEBIBAbder"
                 target="_blank"
                 class="fs-4"
+                style="color: #fbc634"
                 ><i class="bi bi-twitter-x"></i
               ></a>
               <a
@@ -614,12 +616,19 @@
 
             "
                 class="fs-4"
+                style="color: #fbc634"
                 ><i class="bi bi-linkedin"></i
               ></a>
-              <a href="https://facebook.com/" class="fs-4"
+              <a
+                href="https://facebook.com/"
+                class="fs-4"
+                style="color: #fbc634"
                 ><i class="bi bi-facebook"></i
               ></a>
-              <a href="https://instagram.com/" class="fs-4"
+              <a
+                href="https://instagram.com/"
+                class="fs-4"
+                style="color: #fbc634"
                 ><i class="bi bi-instagram"></i
               ></a>
             </div>
@@ -628,7 +637,9 @@
             <div class="col-12 text-center">
               <p>
                 &copy; 2023 - 2024 - Tous droits réservés -
-                <a href="mentions.html" target="_blank">Mentions légales</a>
+                <a href="mentions.html" target="_blank" style="color: #fbc634"
+                  >Mentions légales</a
+                >
               </p>
             </div>
           </div>
@@ -641,7 +652,7 @@
       integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
       crossorigin="anonymous"
     ></script>
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
       integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
