--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             aria-expanded="false"
             aria-label="Toggle navigation"
           >
-            <span class="navbar-toggler-icon"></span>
+            <span class="navbar-toggler-icon col-12"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
@@ -117,86 +117,87 @@
                 <i class="fa fa-star rating-color"></i>
                 <i class="fa fa-star"></i>
               </div>
+              <div class="row d-flex">
+                <div class="containers d-flex">
+                  <div class="row col-12 col-md-6">
+                    <div
+                      class="mt-5 d-flex justify-content-between align-items-center"
+                    >
+                      <h5 class="review-stat">Confiance en soi</h5>
+                      <div class="small-ratings mx-auto">
+                        <i class="fa fa-star rating-color"></i>
+                        <i class="fa fa-star rating-color"></i>
+                        <i class="fa fa-star rating-color"></i>
+                        <i class="fa fa-star rating-color"></i>
+                        <i class="fa fa-star rating-color"></i>
+                      </div>
+                    </div>
 
-              <div class="container d-flex">
-                <div class="col-12 col-md-6">
-                  <div
-                    class="mt-5 d-flex justify-content-between align-items-center"
-                  >
-                    <h5 class="review-stat">Confiance en soi</h5>
-                    <div class="small-ratings mx-auto">
-                      <i class="fa fa-star rating-color"></i>
-                      <i class="fa fa-star rating-color"></i>
-                      <i class="fa fa-star rating-color"></i>
-                      <i class="fa fa-star rating-color"></i>
-                      <i class="fa fa-star rating-color"></i>
+                    <div
+                      class="mt-1 d-flex justify-content-between align-items-center"
+                    >
+                      <h5 class="review-stat">Travail en équipe</h5>
+                      <div class="small-ratings mx-auto">
+                        <i class="fa fa-star rating-color"></i>
+                        <i class="fa fa-star rating-color"></i>
+                        <i class="fa fa-star rating-color"></i>
+                        <i class="fa fa-star rating-color"></i>
+                        <i class="fa fa-star"></i>
+                      </div>
+                    </div>
+
+                    <div
+                      class="mt-1 d-flex justify-content-between align-items-center"
+                    >
+                      <h5 class="review-stat">Capacité d'écoute</h5>
+                      <div class="small-ratings mx-auto">
+                        <i class="fa fa-star rating-color"></i>
+                        <i class="fa fa-star rating-color"></i>
+                        <i class="fa fa-star rating-color"></i>
+                        <i class="fa fa-star rating-color"></i>
+                        <i class="fa fa-star"></i>
+                      </div>
                     </div>
                   </div>
 
-                  <div
-                    class="mt-1 d-flex justify-content-between align-items-center"
-                  >
-                    <h5 class="review-stat">Travail en équipe</h5>
-                    <div class="small-ratings mx-auto">
-                      <i class="fa fa-star rating-color"></i>
-                      <i class="fa fa-star rating-color"></i>
-                      <i class="fa fa-star rating-color"></i>
-                      <i class="fa fa-star rating-color"></i>
-                      <i class="fa fa-star"></i>
+                  <div class="row col-12 col-md-6">
+                    <div
+                      class="mt-5 d-flex justify-content-between align-items-center"
+                    >
+                      <h5 class="review-stat">Capacité d'adaptation</h5>
+                      <div class="small-ratings">
+                        <i class="fa fa-star rating-color"></i>
+                        <i class="fa fa-star rating-color"></i>
+                        <i class="fa fa-star rating-color"></i>
+                        <i class="fa fa-star rating-color"></i>
+                        <i class="fa fa-star rating-color"></i>
+                      </div>
                     </div>
-                  </div>
 
-                  <div
-                    class="mt-1 d-flex justify-content-between align-items-center"
-                  >
-                    <h5 class="review-stat">Capacité d'écoute</h5>
-                    <div class="small-ratings mx-auto">
-                      <i class="fa fa-star rating-color"></i>
-                      <i class="fa fa-star rating-color"></i>
-                      <i class="fa fa-star rating-color"></i>
-                      <i class="fa fa-star rating-color"></i>
-                      <i class="fa fa-star"></i>
+                    <div
+                      class="mt-1 d-flex justify-content-between align-items-center"
+                    >
+                      <h5 class="review-stat">Relationnel</h5>
+                      <div class="small-ratings">
+                        <i class="fa fa-star rating-color"></i>
+                        <i class="fa fa-star rating-color"></i>
+                        <i class="fa fa-star rating-color"></i>
+                        <i class="fa fa-star rating-color"></i>
+                        <i class="fa fa-star rating-color"></i>
+                      </div>
                     </div>
-                  </div>
-                </div>
 
-                <div class="col-12 col-md-6">
-                  <div
-                    class="mt-5 d-flex justify-content-between align-items-center"
-                  >
-                    <h5 class="review-stat">Capacité d'adaptation</h5>
-                    <div class="small-ratings">
-                      <i class="fa fa-star rating-color"></i>
-                      <i class="fa fa-star rating-color"></i>
-                      <i class="fa fa-star rating-color"></i>
-                      <i class="fa fa-star rating-color"></i>
-                      <i class="fa fa-star rating-color"></i>
-                    </div>
-                  </div>
-
-                  <div
-                    class="mt-1 d-flex justify-content-between align-items-center"
-                  >
-                    <h5 class="review-stat">Relationnel</h5>
-                    <div class="small-ratings">
-                      <i class="fa fa-star rating-color"></i>
-                      <i class="fa fa-star rating-color"></i>
-                      <i class="fa fa-star rating-color"></i>
-                      <i class="fa fa-star rating-color"></i>
-                      <i class="fa fa-star rating-color"></i>
-                    </div>
-                  </div>
-
-                  <div
-                    class="mt-1 d-flex justify-content-between align-items-center"
-                  >
-                    <h5 class="review-stat">Methodique</h5>
-                    <div class="small-ratings">
-                      <i class="fa fa-star rating-color"></i>
-                      <i class="fa fa-star rating-color"></i>
-                      <i class="fa fa-star rating-color"></i>
-                      <i class="fa fa-star rating-color"></i>
-                      <i class="fa fa-star"></i>
+                    <div
+                      class="mt-1 d-flex justify-content-between align-items-center"
+                    >
+                      <h5 class="review-stat">Methodique</h5>
+                      <div class="small-ratings">
+                        <i class="fa fa-star rating-color"></i>
+                        <i class="fa fa-star rating-color"></i>
+                        <i class="fa fa-star rating-color"></i>
+                        <i class="fa fa-star rating-color"></i>
+                        <i class="fa fa-star"></i>
+                      </div>
                     </div>
                   </div>
                 </div>
@@ -250,7 +251,7 @@
       <section id="about">
         <div class="container">
           <div class="row justify-content-center align-items-center min-vh-100">
-            <div class="col-12 col-md-6" data-aos="fade-right">
+            <div class="col-md-6" data-aos="fade-right">
               <img src="./img/20250102_135535.jpg" alt="" class="img-fluid" />
             </div>
             <div class="col-12 col-md-6 text-center" data-aos="fade-left">
@@ -282,20 +283,20 @@
       <!--SECTION SKILLS-->
       <section id="skills">
         <div class="container">
-          <div class="row justify-content-center align-items-center vh-100">
-            <div class="col-12 text-center mt-5">
+          <div class="row justify-content-center align-items-center min-vh-100">
+            <div class="col-12 text-center">
               <h2>Compétences</h2>
               <h3 class="btn btn-primary">
                 Hard-skills<i class="bi bi-file-earmark-pdf"></i>
               </h3>
               <div class="row justify-content-center">
-                <div class="col-12 col-md-4 p-4 mt-5" data-aos="fade-right">
+                <div class="col-12 col-md-6 p-3 mt-4" data-aos="fade-right">
                   <div
                     class="d-flex justify-content-between align-items-center"
                   ></div>
 
                   <div><strong>Gestion de Projets Web</strong></div>
-                  <div class="small-ratings mb-md-5">
+                  <div class="small-ratings mb-4">
                     <i class="fa fa-star rating-color"></i>
                     <i class="fa fa-star rating-color"></i>
                     <i class="fa fa-star rating-color"></i>
@@ -310,7 +311,7 @@
                   <div>
                     <strong>Mise en Place / Gestion de CMS</strong>
                   </div>
-                  <div class="small-ratings mb-md-5">
+                  <div class="small-ratings mb-4">
                     <i class="fa fa-star rating-color"></i>
                     <i class="fa fa-star rating-color"></i>
                     <i class="fa fa-star rating-color"></i>
@@ -323,7 +324,7 @@
                     <i class="fa fa-star"></i>
                   </div>
                   <div><strong>Conception Multi-Plateformes</strong></div>
-                  <div class="small-ratings mb-md-5">
+                  <div class="small-ratings mb-4">
                     <i class="fa fa-star rating-color"></i>
                     <i class="fa fa-star rating-color"></i>
                     <i class="fa fa-star rating-color"></i>
@@ -338,7 +339,7 @@
                   <div>
                     <strong>Conception Graphique & Web Design</strong>
                   </div>
-                  <div class="small-ratings mb-md-5">
+                  <div class="small-ratings mb-4">
                     <i class="fa fa-star rating-color"></i>
                     <i class="fa fa-star rating-color"></i>
                     <i class="fa fa-star rating-color"></i>
@@ -355,7 +356,7 @@
                       >Validation W3C, WAI & Référencement Naturel SEO</strong
                     >
                   </div>
-                  <div class="small-ratings mb-md-5">
+                  <div class="small-ratings mb-4">
                     <i class="fa fa-star rating-color"></i>
                     <i class="fa fa-star rating-color"></i>
                     <i class="fa fa-star rating-color"></i>
@@ -368,11 +369,11 @@
                     <i class="fa fa-star"></i>
                   </div>
                 </div>
-                <div class="col-12 col-md-4 p-4" data-aos="fade-left">
-                  <div class="mt-5">
+                <div class="col-12 col-md-6 p-3 mt-4" data-aos="fade-left">
+                  <div>
                     <strong>Intégration web (HTML/CSS)</strong>
                   </div>
-                  <div class="small-ratings mb-md-5">
+                  <div class="small-ratings mb-4">
                     <i class="fa fa-star rating-color"></i>
                     <i class="fa fa-star rating-color"></i>
                     <i class="fa fa-star rating-color"></i>
@@ -387,7 +388,7 @@
                   <div>
                     <strong>Développement back-end (PHP/Symfony)</strong>
                   </div>
-                  <div class="small-ratings mb-md-5">
+                  <div class="small-ratings mb-4">
                     <i class="fa fa-star rating-color"></i>
                     <i class="fa fa-star rating-color"></i>
                     <i class="fa fa-star rating-color"></i>
@@ -402,7 +403,7 @@
                   <div>
                     <strong>Gestion de base de données (SQL/MySQL)</strong>
                   </div>
-                  <div class="small-ratings mb-md-5">
+                  <div class="small-ratings mb-4">
                     <i class="fa fa-star rating-color"></i>
                     <i class="fa fa-star rating-color"></i>
                     <i class="fa fa-star rating-color"></i>
@@ -417,7 +418,7 @@
                   <div>
                     <strong>Dynamisation de pages Web(JavaScript)</strong>
                   </div>
-                  <div class="small-ratings mb-md-5">
+                  <div class="small-ratings mb-4">
                     <i class="fa fa-star rating-color"></i>
                     <i class="fa fa-star rating-color"></i>
                     <i class="fa fa-star rating-color"></i>
@@ -435,7 +436,7 @@
                       d'Administration</strong
                     >
                   </div>
-                  <div class="small-ratings mb-md-5">
+                  <div class="small-ratings mb-4">
                     <i class="fa fa-star rating-color"></i>
                     <i class="fa fa-star rating-color"></i>
                     <i class="fa fa-star rating-color"></i>
