Màj Portfolio-mns cv 12.01.25

--- a/index.html
+++ b/index.html
@@ -273,9 +273,8 @@
           <div class="row justify-content-center align-items-center min-vh-100">
             <div class="col-12 text-center">
               <h2>Compétences</h2>
-              <h3 class="btn btn-primary">
-                Hard-skills<i class="bi bi-file-earmark-pdf"></i>
-              </h3>
+              <h3>Hard-skills</h3>
+
               <div class="row justify-content-center">
                 <div class="col-12 col-md-6 p-3 mt-4" data-aos="fade-right">
                   <div
@@ -436,6 +435,18 @@
                     <i class="fa fa-star"></i>
                   </div>
                 </div>
+              </div>
+            </div>
+            <div class="row text-center align-items-center">
+              <div class="col-12" data-aos="zoom-in">
+                <a
+                  href="./img/CV_2024-11-23_Abderahmane_Hebib.pdf"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  style="color: #fbc634"
+                >
+                  <img src="./img/icone-cv.png" alt="" style="width: 10rem"
+                /></a>
               </div>
             </div>
           </div>
