Màj cv portfolio-mns 18.02.25

--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
       <section id="skills">
         <div class="container">
           <div class="row justify-content-center align-items-center min-vh-100">
-            <div class="col-12 text-center">
+            <div class="col-12 text-center mt-5">
               <h2>Compétences</h2>
               <h3>Hard-skills</h3>
 
@@ -281,7 +281,9 @@
                     class="d-flex justify-content-between align-items-center"
                   ></div>
 
-                  <div><strong>Gestion de Projets Web</strong></div>
+                  <div class="mt-5">
+                    <strong>Gestion de Projets Web</strong>
+                  </div>
                   <div class="small-ratings mb-4">
                     <i class="fa fa-star rating-color"></i>
                     <i class="fa fa-star rating-color"></i>
@@ -356,7 +358,7 @@
                   </div>
                 </div>
                 <div class="col-12 col-md-6 p-3 mt-4" data-aos="fade-left">
-                  <div>
+                  <div class="mt-5">
                     <strong>Intégration web (HTML/CSS)</strong>
                   </div>
                   <div class="small-ratings mb-4">
@@ -438,9 +440,9 @@
               </div>
             </div>
             <div class="row text-center align-items-center">
-              <div class="col-12" data-aos="zoom-in">
+              <div class="col-12 mb-5" data-aos="zoom-in">
                 <a
-                  href="./img/CV_2024-11-23_Abderahmane_Hebib.pdf"
+                  href="./img/CV_2025-02-18_Abderahmane_Hebib.pdf"
                   target="_blank"
                   rel="noopener noreferrer"
                   style="color: #fbc634"
