--- a/mentions.html
+++ b/mentions.html
@@ -26,11 +26,11 @@
 
   <body>
     <header>
-      <nav class="navbar navbar-expand-lg bg bg-body-tertiary border-bottom">
+      <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
         <div class="container">
-          <a class="navbar-brand" href="index.html">
+          <a class="navbar-brand" href="#">
             <img
-              src="./img/logo-removebg-preview.png"
+              src="./img/logo-blancremovebg-preview-modified.png"
               width="80"
               alt="Logo"
               class="img-fluid"
@@ -50,19 +50,20 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link" href="index.html#about">À propos</a>
+                <a class="nav-link active" href="#about">À propos</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="index.html#skills">Compétences</a>
+                <a class="nav-link active" href="#skills">Compétences</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="index.html#projects">Mes projets</a>
+                <a class="nav-link active" href="#projects">Mes projets</a>
               </li>
             </ul>
           </div>
         </div>
       </nav>
     </header>
+    <section class="separator"></section>
     <main>
       <section class="container">
         <h2 class="text-center">MENTIONS LÉGALES</h2>
@@ -100,47 +101,85 @@
         </p>
       </section>
     </main>
+    <section class="separator2"></section>
+    <footer>
+      <section class="footer">
+        <div class="container py-5">
+          <div class="row">
+            <div class="col-12 col-lg-3">
+              <a class="navbar-brand" href="index.html">
+                <img
+                  src="./img/logo-blancremovebg-preview-modified.png"
+                  width="80"
+                  alt="Logo"
+                  class="img-fluid"
+                />
+              </a>
+            </div>
+            <div class="col-12 col-lg-3">
+              <h5>Contact</h5>
+              <p>abderahmane.hebib@gmail.com</p>
+            </div>
+            <div class="col-12 col-lg-3">
+              <h5>Liens utiles</h5>
+              <p>
+                <a href="https://metznumericschool.fr" style="color: #fbc634"
+                  >Metz Numeric School</a
+                >
+              </p>
+            </div>
+            <div class="col-12 col-md-3">
+              <h5>Réseaux sociaux</h5>
+              <a
+                href="https://github.com/hebib57"
+                target="_blank"
+                class="fs-4"
+                style="color: #fbc634"
+                ><i class="bi bi-github"></i
+              ></a>
+              <a
+                href="https://twitter.com/HEBIBAbder"
+                target="_blank"
+                class="fs-4"
+                style="color: #fbc634"
+                ><i class="bi bi-twitter-x"></i
+              ></a>
+              <a
+                href="https://linkedin.com/in/abderahmanehebib
 
-    <footer class="bg-body-tertiary text-bg-light">
-      <div class="container py-5">
-        <div class="row">
-          <div class="col-3">
-            <a class="navbar-brand" href="index.html">
-              <img
-                src="./img/logo-removebg-preview.png"
-                width="80"
-                alt="Logo"
-                class="img-fluid"
-              />
-            </a>
+            "
+                class="fs-4"
+                style="color: #fbc634"
+                ><i class="bi bi-linkedin"></i
+              ></a>
+              <a
+                href="https://facebook.com/"
+                class="fs-4"
+                style="color: #fbc634"
+                ><i class="bi bi-facebook"></i
+              ></a>
+              <a
+                href="https://instagram.com/"
+                class="fs-4"
+                style="color: #fbc634"
+                ><i class="bi bi-instagram"></i
+              ></a>
+            </div>
           </div>
-          <div class="col-3">
-            <h5>Contact</h5>
-            <p>abderahmane.hebib@gmail.com</p>
-          </div>
-          <div class="col-3">
-            <h5>Liens utiles</h5>
-            <p>
-              <a href="https://metznumericschool.fr">Metz Numeric School</a>
-            </p>
-          </div>
-          <div class="col-3">
-            <h5>Réseaux sociaux</h5>
-            <a href="#" class="fs-4"><i class="bi bi-github"></i></a>
-            <a href="#" class="fs-4"><i class="bi bi-twitter-x"></i></a>
-            <a href="#" class="fs-4"><i class="bi bi-linkedin"></i></a>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-12 text-center">
-            <p>
-              &copy; 2023 - 2024 - Tous droits réservés -
-              <a href="">Mentions légales</a>
-            </p>
+          <div class="row">
+            <div class="col-12 text-center">
+              <p>
+                &copy; 2023 - 2024 - Tous droits réservés -
+                <a href="mentions.html" target="_blank" style="color: #fbc634"
+                  >Mentions légales</a
+                >
+              </p>
+            </div>
           </div>
         </div>
-      </div>
+      </section>
     </footer>
+
     <!-- Bootstrap JavaScript Libraries -->
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
