ajout de projet Educa Dog et mise à jours git ignore et README

--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@
             <div class="row text-center align-items-center">
               <div class="col-12 mb-5" data-aos="zoom-in">
                 <a
-                  href="./img/CV_2025-02-18_Abderahmane_Hebib.pdf"
+                  href="./img/CV_Abderahmane_Hebib.pdf"
                   target="_blank"
                   rel="noopener noreferrer"
                   style="color: #fbc634"
@@ -508,15 +508,13 @@
                 </div>
                 <div class="col-12 col-md-3 mb-4">
                   <div class="card card-relief" data-aos="zoom-in">
-                    <img
-                      src="https://dummyimage.com/1920x1080.gif"
-                      alt=""
-                      class="img-fluid"
-                    />
+                    <img src="/img/chien-face.png" alt="" class="img-fluid" />
                     <div class="card-body">
-                      <h5 class="card-title">Projet #1</h5>
-                      <p class="card-text">Description du projet.</p>
-                      <a href="#" class="btn btn-dark">Voir en ligne</a>
+                      <h5 class="card-title">Club canin Educa Dog</h5>
+                      <p class="card-text">Projet Fil rouge</p>
+                      <a href="https://educa-dog.fwh.is" class="btn btn-dark"
+                        >Voir en ligne</a
+                      >
                     </div>
                   </div>
                 </div>
