changement format image en webp

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div class="container">
           <a class="navbar-brand" href="#">
             <img
-              src="./img/logo-blancremovebg-preview-modified.png"
+              src="./img/logo-blancremovebg-preview-modified.webp"
               width="80"
               alt="Logo"
               class="img-fluid"
@@ -79,7 +79,7 @@
           <div class="row justify-content-center align-items-center min-vh-100">
             <div class="col-12 col-md-6 text-center">
               <img
-                src="./img/IMG_1015-removebg-preview.png"
+                src="./img/IMG_1015-removebg-preview.webp"
                 width="500"
                 alt="Photo de profil HEBIB Abderahmane"
                 class="img-fluid mb-4"
@@ -239,7 +239,7 @@
         <div class="container">
           <div class="row justify-content-center align-items-center min-vh-100">
             <div class="col-md-6" data-aos="fade-right">
-              <img src="./img/20250102_135535.jpg" alt="" class="img-fluid" />
+              <img src="./img/20250102_135535.webp" alt="" class="img-fluid" />
             </div>
             <div class="col-12 col-md-6 text-center" data-aos="fade-left">
               <h2>A propos de moi</h2>
@@ -447,7 +447,7 @@
                   rel="noopener noreferrer"
                   style="color: #fbc634"
                 >
-                  <img src="./img/icone-cv.png" alt="" style="width: 10rem"
+                  <img src="./img/icone-cv.webp" alt="" style="width: 10rem"
                 /></a>
               </div>
             </div>
@@ -467,7 +467,7 @@
                 <div class="col-12 col-md-3 mb-4">
                   <div class="card card-relief" data-aos="zoom-in">
                     <img
-                      src="./img/logo-3eveches.png"
+                      src="./img/logo-3eveches.webp"
                       alt=""
                       class="img-fluid"
                     />
@@ -488,7 +488,7 @@
                   <div class="card card-relief" data-aos="zoom-in">
                     <div class="justify-content-center">
                       <img
-                        src="./img/logo.png"
+                        src="./img/logo.webp"
                         width="188"
                         alt=""
                         class="img-fluid"
@@ -508,7 +508,7 @@
                 </div>
                 <div class="col-12 col-md-3 mb-4">
                   <div class="card card-relief" data-aos="zoom-in">
-                    <img src="/img/chien-face.png" alt="" class="img-fluid" />
+                    <img src="/img/chien-face.webp" alt="" class="img-fluid" />
                     <div class="card-body">
                       <h5 class="card-title">Club canin Educa Dog</h5>
                       <p class="card-text">Projet Fil rouge</p>
@@ -575,7 +575,7 @@
             <div class="col-12 col-lg-3">
               <a class="navbar-brand" href="index.html">
                 <img
-                  src="./img/logo-blancremovebg-preview-modified.png"
+                  src="./img/logo-blancremovebg-preview-modified.webp"
                   width="80"
                   alt="Logo"
                   class="img-fluid"
