changement phrase d'intro

--- a/index.html
+++ b/index.html
@@ -89,11 +89,11 @@
               <h1>HEBIB Abderahmane</h1>
               <p>Développeur Web Junior</p>
               <p>
-                Actuellement en formation à l’IFA Metz Numéric School, je
-                prépare un diplôme de niveau 5 du RNCP (Bac+2) en tant que
-                Développeur Web/Web Mobile, je suis, dans un premier temps, à la
-                recherche d'un stage d'immersion en entreprise qui se
-                déroulerait du 21 Juillet 2025 au 19 Sptembre 2025.
+                Diplômé du titre RNCP niveau 5 (Bac+2) en Développement Web/Web
+                Mobile à l'IFA Metz Numeric School, je suis actuellement à la
+                recherche d'une alternance en tant que Développeur Full-Stack
+                afin de continuer à développer mes compétences et contribuer à
+                des projets concrets en entreprise.
               </p>
 
               <h5 class="review-count mt-5 mb-3">Soft-Skills</h5>
