ajout image dog

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
               <h1>HEBIB Abderahmane</h1>
               <p>Développeur Web Junior</p>
               <p>
-                Diplômé du titre RNCP niveau 5 (Bac+2) en Développement Web/Web
+                Diplômé du titre RNCP niveau 5 en Développement Web/Web
                 Mobile à l'IFA Metz Numeric School, je suis actuellement à la
                 recherche d'une alternance en tant que Développeur Full-Stack
                 afin de continuer à développer mes compétences et contribuer à
@@ -257,7 +257,7 @@
               <p>
                 Etant en constante évolution, je compte par la suite développer
                 mes compétences et connaissances en intégrant au mois d'Octobre
-                2024 "si ma recherche d'employeur pour un contrat en alternance
+                2025 "si ma recherche d'employeur pour un contrat en alternance
                 aboutie", la formation "Développeur Full Stack" à Metz Numéric
                 School.
               </p>
@@ -467,7 +467,7 @@
                 <div class="col-12 col-md-3 mb-4">
                   <div class="card card-relief" data-aos="zoom-in">
                     <img
-                      src="./img/logo-3eveches.webp"
+                      src="img/logo-3eveches.webp"
                       alt=""
                       class="img-fluid"
                     />
@@ -488,7 +488,7 @@
                   <div class="card card-relief" data-aos="zoom-in">
                     <div class="justify-content-center">
                       <img
-                        src="./img/logo.webp"
+                        src="img/logo.webp"
                         width="188"
                         alt=""
                         class="img-fluid"
@@ -508,7 +508,7 @@
                 </div>
                 <div class="col-12 col-md-3 mb-4">
                   <div class="card card-relief" data-aos="zoom-in">
-                    <img src="/img/chien-face.webp" alt="" class="img-fluid" />
+                    <img src="img/chien-face.webp" alt="" class="img-fluid" />
                     <div class="card-body">
                       <h5 class="card-title">Club canin Educa Dog</h5>
                       <p class="card-text">Projet Fil rouge</p>
