lazy loading sur images

--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
 
     <link rel="preload" href="custom.css" as="style" />
     <link rel="stylesheet" href="custom.css" />
+    <link
+      rel="preload"
+      href="./img/IMG_1015-removebg-preview.webp"
+      as="image"
+    />
   </head>
 
   <body>
@@ -89,10 +94,13 @@
           <div class="row justify-content-center align-items-center min-vh-100">
             <div class="col-12 col-md-6 text-center">
               <img
-                src="./img/IMG_1015-removebg-preview.webp"
+                src="./img/Abd.webp"
                 width="500"
+                height="500"
                 alt="Photo de profil HEBIB Abderahmane"
                 class="img-fluid mb-4"
+                decoding="async"
+                loading="eager"
               />
             </div>
             <div class="col-12 col-md-6 text-center">
@@ -249,7 +257,12 @@
         <div class="container">
           <div class="row justify-content-center align-items-center min-vh-100">
             <div class="col-md-6" data-aos="fade-right">
-              <img src="./img/20250102_135535.webp" alt="" class="img-fluid" />
+              <img
+                src="./img/20250102_135535.webp"
+                alt=""
+                class="img-fluid"
+                loading="lazy"
+              />
             </div>
             <div class="col-12 col-md-6 text-center" data-aos="fade-left">
               <h2>A propos de moi</h2>
@@ -456,8 +469,13 @@
                   target="_blank"
                   rel="noopener noreferrer"
                   style="color: #fbc634"
+                  loading="lazy"
                 >
-                  <img src="./img/icone-cv.webp" alt="" style="width: 10rem"
+                  <img
+                    src="./img/icone-cv.webp"
+                    alt=""
+                    style="width: 10rem"
+                    loading="lazy"
                 /></a>
               </div>
             </div>
@@ -480,6 +498,7 @@
                       src="img/logo-3eveches.webp"
                       alt=""
                       class="img-fluid"
+                      loading="lazy"
                     />
                     <div class="card-body">
                       <h5 class="card-title">Projet WordPress</h5>
@@ -502,6 +521,7 @@
                         width="188"
                         alt=""
                         class="img-fluid"
+                        loading="lazy"
                       />
                     </div>
                     <div class="card-body">
@@ -518,7 +538,12 @@
                 </div>
                 <div class="col-12 col-md-3 mb-4">
                   <div class="card card-relief" data-aos="zoom-in">
-                    <img src="img/chien-face.webp" alt="" class="img-fluid" />
+                    <img
+                      src="img/chien-face.webp"
+                      alt=""
+                      class="img-fluid"
+                      loading="lazy"
+                    />
                     <div class="card-body">
                       <h5 class="card-title">Club canin Educa Dog</h5>
                       <p class="card-text">Projet Fil rouge</p>
@@ -534,6 +559,7 @@
                       src="https://dummyimage.com/1920x1080.gif"
                       alt=""
                       class="img-fluid"
+                      loading="lazy"
                     />
                     <div class="card-body">
                       <h5 class="card-title">Projet #1</h5>
@@ -548,6 +574,7 @@
                       src="https://dummyimage.com/1920x1080.gif"
                       alt=""
                       class="img-fluid"
+                      loading="lazy"
                     />
                     <div class="card-body">
                       <h5 class="card-title">Projet #1</h5>
@@ -562,6 +589,7 @@
                       src="https://dummyimage.com/1920x1080.gif"
                       alt=""
                       class="img-fluid"
+                      loading="lazy"
                     />
                     <div class="card-body">
                       <h5 class="card-title">Projet #1</h5>
@@ -589,6 +617,7 @@
                   width="80"
                   alt="Logo"
                   class="img-fluid"
+                  loading="lazy"
                 />
               </a>
             </div>
