--- a/index.html
+++ b/index.html
@@ -540,7 +540,7 @@
                   <div class="card card-relief" data-aos="zoom-in">
                     <img
                       src="img/chien-face.webp"
-                      alt=""
+                      alt="image chien"
                       class="img-fluid"
                       loading="lazy"
                     />
